fix: harden configuration contracts